--- a/modules/downloads/views/index.jade
+++ b/modules/downloads/views/index.jade
@@ -25,7 +25,7 @@ div.row
                                 div.progress.hide
                                     div.progress-bar(role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%;")
                             td
-                                a.download-link.hide Descargar
+                                a.download-link.hide(href="/files/comcloud.tar.bz2", target="_blank") Descargar
 
         div.jumbotron
             div.jumbotron-photo
