--- a/modules/comcloud/views/wizard/3.jade
+++ b/modules/comcloud/views/wizard/3.jade
@@ -17,13 +17,14 @@ div.row
 
 
 div.row(style="margin-top: 20px;")
-    form(ng-submit="next('#{data.current_step}')")
+    form(ng-submit="next('#{data.current_step}')" enctype="multipart/form-data")
         div.col-xs-12
             div.row
                 div.col-xs-12.col-md-4
                     div.alert.alert-danger
                         h4 La identidad es importante
                         p A continuación debes indicarnos datos relativos sobre la identidad de la empresa
+                      
                 div.col-xs-12.col-md-8
                     div.alert.alert-danger.hide.error-msg
                         button(type="button" class="close" data-dismiss="alert" aria-hidden="true") ×
@@ -36,8 +37,25 @@ div.row(style="margin-top: 20px;")
                         div.panel-body
                             div.form-group
                                 label Indícanos que nombre de dominio utilizáis en internet
-                                input(type="url" class="form-control" placeholder="empresa.com", ng-model="formData.domain")
-
+                                input(type="url" class="form-control" placeholder="http://empresa.com", ng-model="formData.domain")
+                  
+            div.row
+                div.col-xs-12.col-md-4
+                    div.alert.alert-info
+                        h4 Logotipo de la empresa
+                        p Debe subir una imagen con el logotipo de la organizacion/empresa
+                div.col-xs-12.col-md-8
+                    div.panel.panel-primary
+                        //{{ formData.logo }}
+                        div.panel-heading
+                            h3.panel-title Logo
+                        div.panel-body
+                            div.form-group
+                                label Selecciona un archivo de imagen para tu logo
+                                //- input(type="file", accept="image/*", class="form-control", name="logo", ng-model="formData.logo")
+                                ng-thumbnail(image="formData.logo", size="250")
+                                div(ng-thumb="file", on-change="readFile()", ng-file-select="onFileSelect($files)", ng-accept="'image/*'")
+                                
             div.row
                 div.col-xs-12(style="margin-top: 20px;")
                     button.pull-right(type="submit", class="btn") Finalizar
