add recipe composer to download module

--- a/modules/downloads/views/index.jade
+++ b/modules/downloads/views/index.jade
@@ -25,8 +25,8 @@ div.row
                                 div.progress.hide
                                     div.progress-bar(role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%;")
                             td
-                                a.download-link.hide(href="/files/comcloud.tar.bz2", target="_blank") Descargar
-
+                                //a.download-link.hide(href="/files/comcloud.tar.bz2", target="_blank") Descargar
+                                a.download-link.hide(href="{{download_url}}", target="_blank") Descargar
         div.jumbotron
             div.jumbotron-photo
                 iframe(width="100%", height="500", src="https://www.youtube.com/embed/tBJPttvMdig", frameborder="0", allowfullscreen)
